[package]
name = "holomotion-installer"
version = "2.0.0"
edition = "2024"
authors = ["HoloMotion Team"]
description = "HoloMotion application installer and updater"
license = "MIT"

[[bin]]
name = "holomotion-installer"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0", features = ["serde"] }
dirs = "5"
tokio = { version = "1", features = ["full"], optional = true }

[features]
default = []
async = ["tokio"]