[package]
name = "holomotion-installer"
version = "2.0.0"
edition = "2024"
authors = ["HoloMotion Team"]
description = "HoloMotion application installer and updater"
license = "MIT"

[[bin]]
name = "holomotion-installer"
path = "src/main.rs"

[dependencies]
chrono = { version = "0", features = ["serde"] }
clap = { version = "4", features = ["derive", "env", "color"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
dirs = "5"
anyhow = "1"
thiserror = "1"

[profile.release]
opt-level = 3
lto = true
strip = true